--- a/culture.html
+++ b/culture.html
@@ -45,7 +45,7 @@
 <main>    
     <section class="culture">
         <h3 class="title">CULTURE</h3>
-        <h6 class="txt">What's behind the runways? Explore the creative minds shaping the fashion we love.</h6>
+        <h6 class="txt">From blockbusters to indie gems, discover reviews, insights, and behind-the-scenes stories.</h6>
 
         <article  class="card mb-3">
           <img src="/images/web.ae_.emmaseligman.qa_.courtesy.jpeg" class="card-img-top image" alt="...">
